# ef28-badge

./: Cargo.toml  README.md  diagram.json  page.html  platformio.ini  sdkconfig.defaults  wokwi.toml
.devcontainer/: devcontainer.json
coprocessor/: Cargo.toml  a.out
coprocessor/.cargo/: config.toml
coprocessor/src/: ef_led.rs  main.rs
docs/: README.md
include/: FSMState.h  cert.h  private_key.h
main/: Cargo.toml  wokwi.toml
main/.cargo/: config.toml
main/.devcontainer/: devcontainer.json
main/scripts/: flash.sh
main/src/: main.rs
scripts/: flash.sh
src/: FSM.cpp  led.rs  main.rs
src/states/: Funny.cpp  GameHuemesh.cpp  MenuMain.cpp  VUMeter.cpp
